# tetris3D

./: LICENSE  Makefile  README.md
code/: CMakeLists.txt  block.cpp  block.h  consts.h  cube.cpp  cube.h  gamefield.cpp  gamefield.h  gamefieldside.cpp  gamefieldside.h  graph_cubes.py  graph_edges.py  mainwindow.cpp  mainwindow.h  mainwindow.ui  polygonmeshobject.cpp  polygonmeshobject.h  renderer.cpp  renderer.h  scene.cpp  scene.h  tetrisengine.cpp  tetrisengine.h
scripts/: build.sh
